[package]
name = "speexdsp_reset_mem_test"
version = "0.1.0"
authors = ["Shamir Khodzha <khodzha.sh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.speexdsp]
git = "https://github.com/rust-av/speexdsp-rs"
default-features = false
features = []
